# holocron-rag

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase_a_initial.py  0002_phase_d_audit_correlation.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  deps.py  healthz.py  retrieval.py  schemas.py  user.py
backend/app/core/: clearance.py  config.py  database.py  logging.py  security.py  tenant.py  warmup.py
backend/app/domain/: chunk.py  conflict.py  document.py  enums.py  models.py
backend/app/repositories/: audit_repository.py  chunk_repository.py  document_repository.py  user_repository.py
backend/app/services/answer_generation/: __init__.py  citations.py  groq_llm_adapter.py  llm_client.py  prompts.py
backend/app/services/conflict_detection/: __init__.py  judge.py  prefilter.py  prompts.py
backend/app/services/ingestion/: embedding.py  embedding_factory.py  entity_extractor.py  loader.py  pipeline.py  splitter.py
backend/app/services/retrieval/: __init__.py  refusal.py  rrf.py
backend/eval/: golden_set.yaml  prompts.py  report.py  runner.py  scorer.py
backend/eval/reports/: 2026-06-28.json  2026-06-28.md
backend/scripts/: seed_corpus.py  seed_users.py
backend/tests/: conftest.py  test_admin_audit_endpoint.py  test_answer_generation.py  test_answer_generation_synthesizer.py  test_answer_prompts.py  test_audit_correlation.py  test_audit_repository.py  test_audit_response.py  test_auth_api.py  test_chat_endpoint.py  test_chunk_repository.py  test_chunk_repository_mappings.py  test_citations.py  test_clearance.py  test_config.py  test_conflict_detection.py  test_conflict_judge.py  test_conflict_prefilter.py  test_correlation_middleware.py  test_database.py  test_document_repository.py  test_domain_conflict.py  test_domain_phase_b.py  test_embedding_bge.py  test_embedding_fake.py  test_entity_extractor.py  test_entity_extractor_real.py  test_enums.py  test_eval_report.py  test_eval_runner.py  test_eval_scorer.py  test_groq_llm_adapter.py  test_healthz.py  test_ingestion_pipeline.py  test_ingestion_pipeline_entities.py  test_llm_client.py  test_loader.py  test_logging.py  test_models.py  test_models_phase_b.py  (+10 more)
frontend/: .env.local.example  Dockerfile  package.json  pnpm-lock.yaml  (+1 more)
(+71 files in other folders)
