[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holocron-backend"
version = "0.1.0"
description = "HOLOCRON backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "bcrypt>=4.2,<5.0",
    "pyjwt>=2.10,<3.0",
    "python-multipart>=0.0.20,<0.1",
    # Phase B
    "llama-index-core>=0.12,<0.13",
    "llama-index-embeddings-huggingface>=0.4,<0.5",
    "sentence-transformers>=3.0,<4.0",
    "python-frontmatter>=1.1,<2.0",
    "pgvector>=0.3,<0.4",
    "numpy>=1.26,<3.0",
    # Phase C
    "spacy>=3.7,<4.0",
    "groq>=0.13,<0.14",
    # Phase D
    "structlog>=24.4,<25.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.28,<0.29",
    "ruff>=0.8,<0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = ["slow: tests that load real ML models or hit external services"]

[tool.ruff]
line-length = 100
target-version = "py311"
